# training

./: FoliumMap .ipynb  MeuPythonEscolhaSorteio.ipynb  Pandas_e_Polars.ipynb  REPORTlivros.ipynb  TestandoGeoPandas.ipynb  africa.html  america.html  asia.html  clean.ipynb  europa.html  foliummap.py  meupythonescolhasorteio.py  pyproject.toml  webscraping.py
