[tool.poetry]
name = "training-python"
version = "0.1.0"
description = ""
authors = ["jumozaga <jumozaga@yahoo.com>"]
readme = "README.md"
packages = [{include = "training_python"}]

[tool.poetry.dependencies]
python = "^3.11"
folium = "^0.14.0"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
sweetviz = "^2.1.4"
dash = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
